--- a/spotifai/package.json
+++ b/spotifai/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "d3": "^7.8.5",
@@ -40,6 +39,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^14.2.1",
+    "jest": "^27.5.1",
     "react-scripts": "^5.0.1"
   }
 }
