--- a/spotifai/package.json
+++ b/spotifai/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
+    "animejs": "^3.2.2",
     "axios": "^1.6.7",
     "d3": "^7.8.5",
     "react": "^18.2.0",
