saving the unworking stuff rn

--- a/spotifai/package.json
+++ b/spotifai/package.json
@@ -8,11 +8,25 @@
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.2",
     "axios": "^1.6.7",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "d3": "^7.8.5",
+    "g-trends": "^0.0.9",
+    "google-trends-api": "^4.9.2",
+    "https-browserify": "^1.0.0",
+    "node-polyfill-webpack-plugin": "^3.0.0",
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-load-script": "^0.0.6",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "styled-components": "^6.1.8",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
