--- a/spotifai/package.json
+++ b/spotifai/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.2",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "d3": "^7.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
